# Elementary-cellular-automaton

./: Application.cpp  Application.h  CMakeLists.txt  CellularAutomaton.cpp  CellularAutomaton.h  main.cpp  readme.txt
